<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.learn.dimdimasdim.bidfishnelayan.view.LoginActivity">

    <include layout="@layout/view_header_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_padding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_email"
            android:textColorHint="@color/colorPrimaryLight"
            android:layout_marginBottom="@dimen/item_margin_8">

            <EditText
                android:id="@+id/edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_your_email"
                android:fontFamily="@font/nunitosans_regular"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_password"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorPrimaryLight"
            android:layout_marginBottom="@dimen/item_margin_8">

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/label_your_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/width_button_general"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/item_margin_32"
            android:background="@drawable/bg_button_general"
            android:text="@string/label_login"
            android:fontFamily="@font/nunitoaans_bold"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_margin_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_doesnt_have_account"/>

        <TextView
            android:layout_marginLeft="@dimen/item_margin_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"/>

    </LinearLayout>
</LinearLayout>
