<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.learn.dimdimasdim.bidfishnelayan.view.DetailAuctionActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@id/toolbar_detail_auction">

            <LinearLayout
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_detail_fish"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/item_margin_8">

                        <TextView
                            android:id="@+id/tv_detail_auction_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="@font/nunitosans_bold"
                            android:text="Auction Name"
                            android:layout_gravity="left"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fishing Vessels 1"
                            android:id="@+id/tv_fish_vessel"
                            android:fontFamily="@font/nunitosans_regular"

                            android:layout_alignParentRight="true"/>



                        <LinearLayout
                            android:layout_marginTop="@dimen/item_margin_8"
                            android:layout_below="@id/tv_fish_vessel"
                            android:id="@+id/ll_loc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/iv_loc"
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:gravity="center"
                                android:src="@drawable/ic_my_location_black_24dp"
                                />

                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_detail_location_fish"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/nunitosans_regular"
                                android:text="Jakarta" />


                        </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_gravity="left"
                        android:layout_margin="@dimen/item_margin_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_price"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/pricetagimg2" />

                        <TextView
                            android:id="@+id/tv_detail_price_fish"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="20sp"
                            android:layout_height="wrap_content"
                            android:text="Starting Price"
                            android:fontFamily="@font/nunitosans_regular"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/item_margin_8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Item Description"
                            android:fontFamily="@font/nunitosans_regular"/>

                        <TextView
                            android:id="@+id/tv_desc_auct"
                            android:fontFamily="@font/nunitosans_regular"
                            android:layout_marginTop="@dimen/item_margin_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/large_text_example"/>

                    </LinearLayout>







                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_gravity="bottom">

                        <TextView
                            android:id="@+id/tv_timecatch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_below="@+id/tv_kindFish_detail_auction"
                            android:fontFamily="@font/nunitosans_regular"
                            android:text="Fish catch time   :"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/tv_detail_time_catching"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textSize="12sp"
                            android:fontFamily="@font/nunitosans_regular"
                            android:text="@string/label_sample_fullname"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/tv_timeleft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosans_regular"
                            android:text="Auction time left :"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_detail_time_to_bid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/label_sample_fullname"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp"
                            android:fontFamily="@font/nunitosans_regular"
                            />


                    </LinearLayout>



                </LinearLayout>



            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail_auction"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                android:fitsSystemWindows="true"
                app:popupTheme="@style/Theme.AppCompat.Light">

                <TextView
                    android:id="@+id/tv_panel_discussion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:lineSpacingExtra="5sp"
                    android:text="Auction Detail"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_bidder_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_padding"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            />


    </RelativeLayout>




    <Button
        android:id="@+id/btn_stop_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="@dimen/item_margin_32"
        android:background="@color/colorPrimaryDark"
        android:text="@string/label_finish_bid"
        android:fontFamily="@font/nunitosans_bold"
        android:textColor="@color/colorWhite" />


</android.support.design.widget.CoordinatorLayout>
